--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -12,7 +12,7 @@ es:
       last_attempt: "You have one more attempt before your account is locked."
       not_found_in_database: "Invalid %{authentication_keys} or password."
       timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
+      unauthenticated: "Tienes que estar registrado para poder comprar"
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
