Add new locales

--- a/config/locales/activerecord.es.yml
+++ b/config/locales/activerecord.es.yml
@@ -54,7 +54,7 @@ es:
         blank: "no puede estar vacio."
         too_short: "es demasiado corto."
         too_long: "es demasiado largo."
-
+        not_a_number: "tiene que ser un numero."
       models:
         sub_category:
           required: "tiene que estar presente"
