Fix uniq issues

--- a/config/locales/activerecord.es.yml
+++ b/config/locales/activerecord.es.yml
@@ -25,6 +25,7 @@ es:
         photos: "Fotos"
         sub_category: "Categoria"
         description: "Descripción"
+        second_description: "Segunda Descripción"
       variant:
         size: "Talle"
         price_cents: "Precio"
